internal/xds/translator/testdata/out/xds-ir/http-route-redirect.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        safeRegex:
          regex: ^/blogs/([0-9]+)$
      name: regex-redirect-route
      redirect:
        hostRedirect: example.com
        regexRewrite:
          pattern:
            regex: ^/blogs/([0-9]+)$
          substitution: /post-\1
        schemeRedirect: https
    - match:
        prefix: /
      name: redirect-route-1
      redirect:
        hostRedirect: redirected.com
        portRedirect: 8443
        prefixRewrite: /redirected
        responseCode: FOUND
        schemeRedirect: https
    - match:
        pathSeparatedPrefix: /redirect
      name: redirect-route-2
      redirect:
        regexRewrite:
          pattern:
            regex: ^/redirect\/*
          substitution: /
    - match:
        pathSeparatedPrefix: /redirect
      name: redirect-route-3
      redirect:
        regexRewrite:
          pattern:
            regex: ^/redirect/\/*
          substitution: /
    - match:
        prefix: /
      name: redirect-route-4
      redirect:
        hostRedirect: redirected.com
        prefixRewrite: /redirected
        responseCode: FOUND
        schemeRedirect: https
    - match:
        prefix: /
      name: redirect-route-5
      redirect:
        hostRedirect: redirected.com
        prefixRewrite: /redirected
        responseCode: FOUND
        schemeRedirect: https
